# A-Stock-Agent-Studio

./: CLAUDE.md  LICENSE  docker-compose.yml  package.json
.claude/: settings.local.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/.claude/: settings.local.json
backend/a_stock_agent_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 849289a270f8_create_stocks_table.py  fe4ee1dc8327_create_stocks_table.py
backend/app/: main.py
backend/app/agents/: state.py
backend/app/api/: router.py
backend/app/api/v1/: analysis.py  health.py  reports.py  stocks.py
backend/app/core/: config.py  errors.py  tracing.py
backend/app/db/: session.py
backend/app/models/: __init__.py  stock.py
backend/app/providers/: llm_provider.py  mock_market_provider.py  test.py
backend/app/schemas/: analysis.py  common.py  report.py  stock.py
backend/app/services/: market_data_service.py  report_service.py  stock_analysis_service.py  stock_service.py
backend/app/tools/: base.py
backend/scripts/: sync_stocks.py
backend/tests/: test_health.py  test_reports.py  test_stocks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/.claude/: settings.local.json
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  stocks.ts
frontend/src/components/: AgentTimeline.tsx  AppShell.tsx  EvidenceSources.tsx  ReportPanel.tsx  RiskNotice.tsx  Sidebar.tsx  StockChartPanel.tsx  StockSearchHero.tsx  StockSummaryCard.tsx  TopBar.tsx
frontend/src/data/: mock.ts
frontend/src/lib/: debounce.ts  format.ts
(+2 files in other folders)
