[project]
name = "a-stock-agent-api"
version = "0.1.0"
description = "FastAPI backend for A-Stock Agent Studio"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "sse-starlette>=2.1.3",
  "sqlalchemy>=2.0.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.3",
  "redis>=5.1.1",
  "akshare>=1.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.0",
  "httpx>=0.27.2",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
